// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddressRowMobile > should emit action on select button 1`] = `<DocumentFragment />`;

exports[`AddressRowMobile > should not render delegate name if name is not provided 1`] = `<DocumentFragment />`;

exports[`AddressRowMobile > should render for a multisignature wallet 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="shrink-0 css-1i0wxh3"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex w-full items-center css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://test.arkscan.io/wallets/D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures css-0"
                              data-testid="TruncateMiddle"
                            >
                              arkx
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <span>
                    <div
                      class="text-theme-danger-400 css-1i4b0eq"
                      data-testid="StatusIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="circle-cross"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-width="2"
                        >
                          <circle
                            cx="10"
                            cy="10"
                            r="9"
                            stroke-miterlimit="10"
                          />
                          <path
                            d="M7 13l6-6M13 13L7 7"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render in 375 screen width 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="shrink-0 css-1i0wxh3"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex w-full items-center css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures css-0"
                              data-testid="TruncateMiddle"
                            >
                              arkx
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <span>
                    <div
                      class="text-theme-success-600 css-1i4b0eq"
                      data-testid="StatusIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="circle-check-mark"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-width="2"
                        >
                          <circle
                            cx="10"
                            cy="10"
                            r="9"
                            stroke-miterlimit="10"
                          />
                          <path
                            d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  ,
</DocumentFragment>
`;

exports[`AddressRowMobile > should render in 420 screen width 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="shrink-0 css-1i0wxh3"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex w-full items-center css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures css-0"
                              data-testid="TruncateMiddle"
                            >
                              arkx
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <span>
                    <div
                      class="text-theme-success-600 css-1i4b0eq"
                      data-testid="StatusIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="circle-check-mark"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-width="2"
                        >
                          <circle
                            cx="10"
                            cy="10"
                            r="9"
                            stroke-miterlimit="10"
                          />
                          <path
                            d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  ,
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when the maximum votes is greater than 1 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="flex items-center -space-x-1"
                  >
                    <span
                      class="flex"
                    >
                      <div
                        class="ring-2 ring-theme-background shrink-0 css-1i0wxh3"
                        data-testid="Avatar"
                      >
                        <div
                          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                            title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                          />
                        </div>
                      </div>
                    </span>
                    <span
                      class="flex"
                    >
                      <div
                        class="ring-2 ring-theme-background shrink-0 css-1i0wxh3"
                        data-testid="Avatar"
                      >
                        <div
                          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 188, 212)" width="100" height="100"/><circle r="50" cx="20" cy="30" fill="rgb(3, 169, 244)"/><circle r="60" cx="0" cy="70" fill="rgb(156, 39, 176)"/><circle r="45" cx="80" cy="60" fill="rgb(255, 152, 0)"/></svg>"
                            title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                          />
                        </div>
                      </div>
                    </span>
                    <span
                      class="flex"
                    >
                      <div
                        class="ring-2 ring-theme-background shrink-0 css-1i0wxh3"
                        data-testid="Avatar"
                      >
                        <div
                          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(63, 81, 181)" width="100" height="100"/><circle r="40" cx="100" cy="40" fill="rgb(0, 150, 136)"/><circle r="55" cx="60" cy="60" fill="rgb(205, 220, 57)"/><circle r="50" cx="50" cy="30" fill="rgb(33, 150, 243)"/></svg>"
                            title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                          />
                        </div>
                      </div>
                    </span>
                    <span
                      class="flex"
                    >
                      <div
                        class="ring-2 ring-theme-background shrink-0 css-1i0wxh3"
                        data-testid="Avatar"
                      >
                        <div
                          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(244, 67, 54)" width="100" height="100"/><circle r="50" cx="20" cy="50" fill="rgb(205, 220, 57)"/><circle r="60" cx="0" cy="70" fill="rgb(0, 188, 212)"/><circle r="55" cx="80" cy="30" fill="rgb(76, 175, 80)"/></svg>"
                            title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          />
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <span>
                    <div
                      class="text-theme-success-600 css-1i4b0eq"
                      data-testid="StatusIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="circle-check-mark"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-width="2"
                        >
                          <circle
                            cx="10"
                            cy="10"
                            r="9"
                            stroke-miterlimit="10"
                          />
                          <path
                            d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when the wallet has many votes 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="flex items-center -space-x-1"
                  >
                    <span
                      class="flex"
                    >
                      <div
                        class="ring-2 ring-theme-background shrink-0 css-1i0wxh3"
                        data-testid="Avatar"
                      >
                        <div
                          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                            title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                          />
                        </div>
                      </div>
                    </span>
                    <span
                      class="flex"
                    >
                      <div
                        class="ring-2 ring-theme-background shrink-0 css-1i0wxh3"
                        data-testid="Avatar"
                      >
                        <div
                          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 188, 212)" width="100" height="100"/><circle r="50" cx="20" cy="30" fill="rgb(3, 169, 244)"/><circle r="60" cx="0" cy="70" fill="rgb(156, 39, 176)"/><circle r="45" cx="80" cy="60" fill="rgb(255, 152, 0)"/></svg>"
                            title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                          />
                        </div>
                      </div>
                    </span>
                    <span
                      class="flex"
                    >
                      <div
                        class="ring-2 ring-theme-background shrink-0 css-1i0wxh3"
                        data-testid="Avatar"
                      >
                        <div
                          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(63, 81, 181)" width="100" height="100"/><circle r="40" cx="100" cy="40" fill="rgb(0, 150, 136)"/><circle r="55" cx="60" cy="60" fill="rgb(205, 220, 57)"/><circle r="50" cx="50" cy="30" fill="rgb(33, 150, 243)"/></svg>"
                            title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                          />
                        </div>
                      </div>
                    </span>
                    <div
                      class="pl-3"
                    >
                      <span
                        class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-600"
                      >
                        +2
                      </span>
                    </div>
                  </div>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <span>
                    <div
                      class="text-theme-success-600 css-1i4b0eq"
                      data-testid="StatusIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="circle-check-mark"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-width="2"
                        >
                          <circle
                            cx="10"
                            cy="10"
                            r="9"
                            stroke-miterlimit="10"
                          />
                          <path
                            d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when wallet hasn't voted 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="shrink-0 css-1i0wxh3"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex w-full items-center css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://test.arkscan.io/wallets/D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures css-0"
                              data-testid="TruncateMiddle"
                            >
                              arkx
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <span>
                    <div
                      class="text-theme-danger-400 css-1i4b0eq"
                      data-testid="StatusIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="circle-cross"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-width="2"
                        >
                          <circle
                            cx="10"
                            cy="10"
                            r="9"
                            stroke-miterlimit="10"
                          />
                          <path
                            d="M7 13l6-6M13 13L7 7"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(255, 87, 34)" width="100" height="100"/><circle r="55" cx="40" cy="30" fill="rgb(3, 169, 244)"/><circle r="35" cx="90" cy="70" fill="rgb(0, 188, 212)"/><circle r="60" cx="30" cy="40" fill="rgb(233, 30, 99)"/></svg>"
                      title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        testwallet2
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-168czqh"
                  />
                  <span
                    class="text-theme-secondary-400"
                  >
                    N/A
                  </span>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <div
                    class="shrink-0 border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-168czqh"
                  />
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-1"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when wallet not found for votes 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="shrink-0 css-1i0wxh3"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex w-full items-center css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://test.arkscan.io/wallets/D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures css-0"
                              data-testid="TruncateMiddle"
                            >
                              arkx
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <span>
                    <div
                      class="text-theme-danger-400 css-1i4b0eq"
                      data-testid="StatusIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="circle-cross"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-width="2"
                        >
                          <circle
                            cx="10"
                            cy="10"
                            r="9"
                            stroke-miterlimit="10"
                          />
                          <path
                            d="M7 13l6-6M13 13L7 7"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="DTLomV8hpJheFDPnBGB5EtrDCfDZJnG23z"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(205, 220, 57)" width="100" height="100"/><circle r="60" cx="100" cy="50" fill="rgb(244, 67, 54)"/><circle r="45" cx="20" cy="40" fill="rgb(3, 169, 244)"/><circle r="35" cx="30" cy="60" fill="rgb(33, 150, 243)"/></svg>"
                      title="DTLomV8hpJheFDPnBGB5EtrDCfDZJnG23z"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      DTLomV8hpJheFDPnBGB5EtrDCfDZJnG23z
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-168czqh"
                  />
                  <span
                    class="text-theme-secondary-400"
                  >
                    N/A
                  </span>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <div
                    class="shrink-0 border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-168czqh"
                  />
                </div>
              </div>
              <button
                class="p-6 rounded-none css-1772sn1"
                data-testid="AddressRowMobile__select-1"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when wallet not loaded 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-168czqh"
                    data-testid="AddressRowMobile--nowallet"
                  />
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <div
                    class="shrink-0 border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-168czqh"
                  />
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render with active delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="shrink-0 css-1i0wxh3"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex w-full items-center css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures css-0"
                              data-testid="TruncateMiddle"
                            >
                              arkx
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <span>
                    <div
                      class="text-theme-success-600 css-1i4b0eq"
                      data-testid="StatusIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="circle-check-mark"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-width="2"
                        >
                          <circle
                            cx="10"
                            cy="10"
                            r="9"
                            stroke-miterlimit="10"
                          />
                          <path
                            d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render with resigned delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="shrink-0 css-1i0wxh3"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex w-full items-center css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures css-0"
                              data-testid="TruncateMiddle"
                            >
                              arkx
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <span>
                    <div
                      class="text-theme-danger-400 css-1i4b0eq"
                      data-testid="StatusIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="circle-cross"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-width="2"
                        >
                          <circle
                            cx="10"
                            cy="10"
                            r="9"
                            stroke-miterlimit="10"
                          />
                          <path
                            d="M7 13l6-6M13 13L7 7"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render with standby delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="overflow-hidden border-b border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800"
            >
              <div
                class="flex items-center justify-start space-x-3 overflow-hidden"
              >
                <div
                  class="shrink-0 shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="flex w-0 flex-1 overflow-hidden"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex"
            >
              <div
                class="flex w-full flex-col bg-theme-secondary-100 px-6 py-4 dark:bg-black"
              >
                <span
                  class="text-theme-secondary-500"
                >
                  Voting for
                </span>
                <div
                  class="flex flex-grow items-center space-x-2 overflow-hidden"
                >
                  <div
                    class="shrink-0 css-1i0wxh3"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex w-full items-center css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures css-0"
                              data-testid="TruncateMiddle"
                            >
                              arkx
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                  <span>
                    <div
                      class="text-theme-warning-300 css-1i4b0eq"
                      data-testid="StatusIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="clock"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-miterlimit="10"
                          stroke-width="2"
                          transform="translate(1.5 1.5)"
                        >
                          <circle
                            cx="8.5"
                            cy="8.5"
                            r="9"
                          />
                          <path
                            d="M8.5 8.5V5.2M8.5 8.5l3.9 3.9"
                          />
                        </g>
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <button
                class="p-6 rounded-none css-6vay55"
                data-testid="AddressRowMobile__select-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Vote
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
